<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <!-- The main content view -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    tools:context=".ManualSearchActivity" >

    
    
    
    <TextView
        android:textColor="@color/default_text_colour"
        android:id="@+id/search_manual_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:text="@string/post_manual_header_text" 
        
        />  
      
         
     <TextView
        android:textColor="@color/default_text_colour"
        android:id="@+id/subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_manual_header"
        android:textIsSelectable="false"
        android:textSize="15sp"
        android:text="@string/subject" 
        
        /> 
      <Spinner 
        android:id="@+id/spinnerCourse"
		android:textColorHint="@color/default_text_colour"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@id/search_manual_header"
	    android:layout_toRightOf="@id/subject"
        />
      <EditText
        android:id="@+id/textCourseNum"
		android:textColorHint="@color/default_text_hint_colour"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_toRightOf="@id/spinnerCourse"
	    android:layout_below="@id/search_manual_header"
	    android:digits="0,1,2,3,4,5,6,7,8,9"
	    android:hint="Enter course number"
	    android:inputType="number"
	    android:maxLength="3"
	    
        />
  
     
      
      <Spinner 
        android:id="@+id/spinnerTerm"
		android:textColorHint="@color/default_text_hint_colour"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@id/spinnerCourse"
	  	android:hint="@string/term"
	  	
        />
    
     <EditText
	    android:id="@+id/search_manual_booktitle"
	    android:textColorHint="@color/default_text_hint_colour"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_booktitle_hint"
	    android:inputType="textCapSentences"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/spinnerTerm"/>
     
      <EditText
	    android:id="@+id/search_manual_bookauthor"
	    android:textColorHint="@color/default_text_hint_colour"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_bookauthor_hint"
	    android:inputType="textCapSentences"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/search_manual_booktitle"/>
      
       <EditText
	    android:id="@+id/search_manual_bookisbn"
	    android:textColorHint="@color/default_text_hint_colour"
	    android:layout_height="wrap_content"
	    android:hint="@string/post_manual_bookisbn_hint"
	    android:inputType="number"
	    android:digits="0123456789-"
	    android:layout_width="fill_parent"
	    android:layout_below="@id/search_manual_bookauthor"
	    android:maxLength="13"/>
       
       <Button
        android:id="@+id/scanISBNButton"
        android:textColor="@color/default_text_colour"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/search_manual_bookisbn"
       	android:text="@string/scanISBN"
       	android:layout_alignRight="@id/search_manual_bookisbn"
       	android:onClick="scanISBN"
       />
       
       <Button
        android:id="@+id/post_manual_submit"
        android:textColor="@color/default_text_colour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/submit"
        android:onClick="submitResults"
        android:layout_below="@id/scanISBNButton"  />
</RelativeLayout>

    <!-- The navigation drawer -->
        <ListView
        android:id="@+id/list_slidermenu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"       
        android:listSelector="@drawable/list_selector"
        android:background="@color/list_background"/>
    
</android.support.v4.widget.DrawerLayout>