<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchManualActivity" >

    
    <TextView
    	android:id="@+id/contactInfo"        
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="Contact Info of Seller"
    	android:background="@color/detailshighlight"    
    />
    <TextView
	    android:id="@+id/Name"
	    android:text="Name: "
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/contactInfo"
	    android:background="@color/detailshighlight"    
	    
	    
	    />
     <TextView
	    android:id="@+id/nameText"
	    android:text=""
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/contactInfo"
	       
	    android:layout_toRightOf="@id/Name"
	    
	    />
    
    <ImageView
		    android:id="@+id/message_img"
		    android:src="@drawable/message"
		    android:contentDescription="@string/message_img_description"
		    android:layout_marginTop="7dp"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:layout_below="@id/Name"
		    android:layout_toRightOf="@id/profile_pic"
		    android:adjustViewBounds="true" />
		
		<EditText
	        android:id="@+id/message"
	        style="@style/profilePageInfo"
	        android:layout_toRightOf="@id/message_img"
	        android:layout_below="@id/Name"
	        android:inputType="phone"
	        android:singleLine="true"
	        android:imeOptions="actionDone" />
		
		<ImageView
            android:id="@+id/email_img"
            android:src="@drawable/email"
            android:contentDescription="@string/email_img_description"
            android:layout_marginTop="7dp"
            android:layout_width="32dp"
         	android:layout_height="32dp"
            android:layout_below="@id/message_img"
            android:layout_toRightOf="@id/profile_pic"
            android:adjustViewBounds="true" />
	    
	    <EditText
	        android:id="@+id/email"
	        style="@style/profilePageInfo"
	        android:inputType="textEmailAddress"
	        android:singleLine="true"
	        android:imeOptions="actionDone"
	        android:layout_toRightOf="@id/email_img"
	        android:layout_below="@id/message_img" />
    
	    
	    

    
	<TextView
	    android:id="@+id/bookTitle"
	    android:text="Title: "
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/email"
	    android:background="@color/detailshighlight"    
	    
	    
	    />
     <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/email"
   		android:layout_toRightOf="@id/bookTitle"
   	 
    />
     <TextView
	    android:id="@+id/authorTitle"
	    android:text="Author: "
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/bookTitle"
	    android:background="@color/detailshighlight"    
	    />
      <TextView
        android:id="@+id/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="false"
        android:layout_below="@id/bookTitle"
        android:layout_toRightOf="@id/authorTitle"
    />
      <TextView
	    android:id="@+id/priceTitle"
	    android:text="Price: "
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/authorTitle"
	    android:background="@color/detailshighlight"    
	    />
       <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="false"
        android:layout_below="@id/author"
        android:layout_toRightOf="@id/priceTitle"
    />
       <TextView
	    android:id="@+id/conditionTitle"
	    android:text="Condition: "
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/priceTitle"
	    android:background="@color/detailshighlight"    
	    
	    />
        <TextView
        android:id="@+id/condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_centerHorizontal="false"
        android:layout_below="@id/price"
        android:layout_toRightOf="@id/conditionTitle"
    />
        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            android:layout_below="@id/condition"
            />
   <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:layout_below="@id/comments"
        android:background="@color/detailshighlight"    
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/commentsText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="No Comments" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
